--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Roucator</string>
+    <string name="refresh">刷新</string>
+    <string name="menu_item">菜单项</string>
 </resources>
