--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,10 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="nearby_wifi">附近接入点</string>
+    <string name="scan_qr_code">扫描二维码</string>
+    <string name="confirm_connection">确认连接</string>
+    <string name="ok">确认</string>
+    <string name="cancel">取消</string>
+    <string name="link_channel">信道</string>
 </resources>
