--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,16 @@
     <string name="ok">确认</string>
     <string name="cancel">取消</string>
     <string name="link_channel">信道</string>
+    <string name="generate_qr_code">生成二维码</string>
+    <string name="select_data_source">选择数据源</string>
+    <string name="manual_input">手动输入</string>
+    <string name="select_from_exist">已保存的项目</string>
+    <string name="confirm">确认</string>
+    <string name="input_information">输入信息</string>
+    <string name="select">选择</string>
+    <string name="none">无</string>
+    <string name="wep">WEP</string>
+    <string name="wpa">WPA/WPA2 PSK</string>
+    <string name="wifi_name">网络名称</string>
+    <string name="password">密码</string>
 </resources>
