--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,5 @@
     <string name="save_to_local">保存到本地</string>
     <string name="would_you_save_to_local">要将此WiFi信息存在本地吗？</string>
     <string name="update">更新</string>
+    <string name="show_password">显示密码</string>
 </resources>
