--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
     <string name="show_password">显示密码</string>
     <string name="navigation_drawer_open">开启侧边菜单</string>
     <string name="navigation_drawer_close">关闭侧边菜单</string>
+    <string name="log_in">登录</string>
 </resources>
