--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,7 @@
     <string name="navigation_drawer_open">开启侧边菜单</string>
     <string name="navigation_drawer_close">关闭侧边菜单</string>
     <string name="log_in">登录</string>
+    <string name="locate">定位</string>
+    <string name="saved_item">保存的项目</string>
+    <string name="scan_qr_code_to_connect">扫码连Wifi</string>
 </resources>
