--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="scan_qr_code_to_connect">扫码连Wifi</string>
     <string name="delete_record">删除记录</string>
     <string name="do_you_confirm_to_delete">确认要删除吗？</string>
+    <string name="please_login">请登录</string>
 </resources>
